# LLM_EndtoEnd

./: .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  feed.py  ingest_text_files.py  pyproject.toml  requirements.txt
